--- a/Introdução a criação de websites com HTML5 e CSS3/style.css
+++ b/Introdução a criação de websites com HTML5 e CSS3/style.css
@@ -1,5 +1,8 @@
 body {
   background-color: whitesmoke;
+  font-family: Verdana;
+  max-width: 900;
+  margin: auto;
 }
 
 .photo {
@@ -11,6 +14,23 @@ body {
 .subtitle,
 .post_title {
   color: #505050;
+}
+
+#title {
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+a {
+  text-decoration: line-through;
+  color: #505050;
+}
+
+.post_title {
+  font-size: 16px;
+  font-style: italic;
+  margin: 0;
+  margin-bottom: 15px;
 }
 
 .post_title {
@@ -28,11 +48,23 @@ body {
   border-radius: 5px;
 }
 
-.post_title {
+.post_content {
   margin: 0;
   margin-bottom: 15px;
+  text-transform: capitalize;
+  text-align: justify;
 }
 
 .post_image {
   margin-bottom: 15px;
+  width: 100%;
+}
+
+.contact_list {
+  list-style-type: none;
+  padding-left: 15px;
+}
+
+.contact_list li a {
+  text-decoration: none;
 }
